syntax = "proto3";

package mwopitz.todo.v1;

option go_package = "github.com/mwopitz/todo-daemon/internal/protogen";

// The gRPC interface of the To-do Daemon.
service TodoDaemon {
  // Queries the status of the To-do Daemon.
  rpc GetStatus (GetStatusRequest) returns (Status) {}
}

// Options for querying the status of the To-do Daemon.
message GetStatusRequest {}

// The status of the To-do Daemon.
message Status {
  ProcessStatus process = 1;
  ServerStatus server = 2;
}

// The status of the To-do Daemon process.
message ProcessStatus {
  uint32 pid = 1;
}

// The status of the To-do Daemon server.
message ServerStatus {
  string api_base_url = 1;
}
